<resources>
    <string name="test">test</string>
    <string name="version">Version %1$s</string>
    <string name="app_name">Music Community</string>
    <string name="all">All</string>
    <string name="or">Or</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="discard">Discard</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_alert">Alert</string>
    <string name="app_logo">App logo</string>
    <string name="username_tools">Username very long login</string>
    <string name="post_title_tools">This is a very very very very very long title for a post that i want to publish on this social network</string>
    <string name="post_location_tools">This is a location</string>
    <string name="post_start_end_tools">From 11/11/11 19:00\nTo 12/12/12 20:00</string>
    <string name="post_start_end_text">From %1$s\nTo %2$s</string>
    <string name="post_end_tools">Until 11/11/11</string>
    <string name="post_end_text">Until %1$s</string>
    <string name="default_id">#999</string>
    <string name="post_id">#%1$d</string>
    <string name="post_creation_date_tools">99/99/99</string>
    <string name="email_tools">thisisareallyreallylongemail@email.com</string>
    <string name="interest_tools">longInterest</string>
    <string name="post_related_tags_label">Tags:</string>
    <string name="chip_post">#%1$d %2$s</string>
    <string name="chip_comment_user">#%1$d %2$s</string>
    <string name="chip_user">#%1$d</string>
    <string name="chip_rating">%1$.1f / 10</string>
    <string name="user">User</string>
    <string name="recommendation">Recommendation</string>
    <string name="advertisement">Advertisement</string>
    <string name="event">Event</string>
    <string name="discussion">Discussion</string>
    <string name="opinion">Opinion</string>
    <string name="date">Date</string>
    <string name="date_hint">Select date</string>
    <string name="time">Time</string>
    <string name="time_hint">Select time</string>
    <string name="tags">Tags</string>
    <string name="tags_hint">Tags (comma separated values)</string>
    <string name="error_empty_field">Required value</string>
    <string name="error_invalid_format_field">Incorrect format</string>
    <string name="commented_on">commented on %1$s :</string>
    <string name="responded_on">responded on %1$s :</string>
    <string name="comment_section">Comments:</string>
    <string name="add_comment">Add comment</string>
    <string name="respond_comment">Respond</string>
    <string name="no_comments">No comments yet. Be the first to comment!</string>
    <string name="no_responses">No responses yet</string>
    <string name="comment_hint">Comment</string>
    <string name="comment_dialog_title">Leave a comment or response</string>
    <string name="comment_dialog_button">Submit</string>
    <string name="not_now_button">Not now</string>
    <string name="select_image">Select image…</string>
    <string name="image_uploaded_successfully">Image uploaded successfully to the post!</string>
    <string name="image_updatedd_successfully">Image updated successfully to the post!</string>
    <string name="popup_edit_option">Edit</string>
    <string name="popup_delete_option">Delete</string>
    <string name="popup_recommend_option">Recommend</string>
    <string name="popup_rate_option">Rate</string>
    <string name="send_comment">Send</string>
    <string name="popup_opinion_option">Create opinion</string>
    <string name="home_screen_title">Welcome to Music Community</string>
    <string name="home_screen_title_already_signed_in">Welcome back, %1$s</string>
    <string name="home_screen_subtitle">An application where you can find events, advertisements, discussions or recommendations of your musical interests. \n\nHere you can keep your scores and share then with whoever you want!</string>
    <string name="home_screen_subtitle_already_signed_in">Start browsing through posts of you interest, and share your tabs with the community!</string>
    <string name="home_screen_show_more_button">More information…</string>
    <string name="home_screen_login_button">Log in</string>
    <string name="home_screen_profile_button">My profile</string>
    <string name="show_more_screen_title">About this app</string>
    <string name="show_more_screen_subtitle_1">This is Music Community</string>
    <string name="show_more_screen_subtitle_2">We have built this so you can have an application where you can store and share your own compositions.
        \n\nIt will allow you to manage events and announcements that you consider of interest to the community of users, hold discussions on musical topics of interest and even ask for feedback on your scores.
        \n\nIt will even allow you to recommend any type of publication to the community, so that your followers are aware of what you like.</string>
    <string name="show_more_screen_footer">Thanks for choosing our application!</string>
    <string name="login_screen_login_title">Welcome back, please log in to your account</string>
    <string name="login_screen_signup_title">Are you new here? Create a new account now</string>
    <string name="login_screen_username">Username</string>
    <string name="login_screen_username_required">Username required</string>
    <string name="login_screen_username_incorrect_format">Username must have between 6–40 characters</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_password_required">Password required</string>
    <string name="login_screen_password_incorrect_format">Password must have between 6–40 characters</string>
    <string name="login_screen_email">Email</string>
    <string name="login_screen_email_required">Email required</string>
    <string name="login_screen_email_incorrect_format">Email must have between 6–60 characters</string>
    <string name="login_screen_phone_number">Phone number</string>
    <string name="login_screen_phone_number_required">Phone number required</string>
    <string name="login_screen_phone_number_incorrect_format">Phone number must have between 6–9 digits</string>
    <string name="login_screen_login_button">Log in</string>
    <string name="login_screen_login_helper">Do you already have an account? Log in</string>
    <string name="login_screen_signup_button">Sign up</string>
    <string name="login_screen_signup_helper">New around here? Register now</string>
    <string name="login_screen_error_sign_in_title">Sign in failed</string>
    <string name="login_screen_success_sign_up_title">Sign up succeed</string>
    <string name="login_screen_success_sign_up_message">Now you can use your credentials to access the app</string>
    <string name="login_screen_error_sign_up_title">Sign up failed</string>
    <string name="profile_screen_title">Profile</string>
    <string name="profile_screen_edit_button">Edit</string>
    <string name="profile_screen_follow_button">Follow</string>
    <string name="profile_screen_unfollow_button">Unfollow</string>
    <string name="profile_screen_logout_button">Logout</string>
    <string name="profile_screen_image_description">Profile image</string>
    <string name="profile_screen_username_label">%1$s\'s profile</string>
    <string name="profile_screen_bio_label">My bio:</string>
    <string name="profile_screen_interests_label">My interests:</string>
    <string name="profile_screen_followers_button">%1$d followers</string>
    <string name="profile_screen_followers">Followers</string>
    <string name="profile_screen_public_scores_button">Public scores</string>
    <string name="profile_screen_posts_button">User posts</string>
    <string name="profile_screen_recommendations_button">User recommendations</string>
    <string name="profile_screen_no_followers">This user does not have followers</string>
    <string name="profile_screen_following_button">%1$d following</string>
    <string name="profile_screen_following">Following</string>
    <string name="profile_screen_no_following">This user is not following anyone</string>
    <string name="profile_screen_title_user_posts">%1$s\'s posts</string>
    <string name="profile_screen_no_posts">No posts found</string>
    <string name="profile_screen_post_type">Post type</string>
    <string name="profile_screen_title_user_recommendations">%1$s\'s recommendations</string>
    <string name="edit_screen_title">Edit profile</string>
    <string name="edit_screen_username">Username</string>
    <string name="edit_screen_email">Email</string>
    <string name="edit_screen_phone_number">Phone number</string>
    <string name="edit_screen_phone_number_required">Phone number required</string>
    <string name="edit_screen_phone_number_incorrect_format">Phone number must have between 6–9 digits</string>
    <string name="edit_screen_bio">Biography</string>
    <string name="edit_screen_bio_incorrect_format">Bio may not be longer than 500 characters</string>
    <string name="edit_screen_interests">Interests</string>
    <string name="edit_screen_interests_hint">Interests (comma separated values)</string>
    <string name="edit_screen_save_button">Save</string>
    <string name="edit_screen_save_dialog_title">Confirm save</string>
    <string name="edit_screen_save_dialog_message">Would you like to save your changes?</string>
    <string name="follower_screen_followers_title">Followers</string>
    <string name="follower_screen_following_title">Following</string>
    <string name="follower_screen_interests_label">Interested in:</string>
    <string name="community_screen_title">Community</string>
    <string name="community_screen_browse">Browse between the different categories</string>
    <string name="community_screen_tab_layout">Tab selector</string>
    <string name="community_tab_users">Users</string>
    <string name="community_tab_advertisements">Advertisements</string>
    <string name="community_tab_events">Events</string>
    <string name="community_tab_discussions">Discussions</string>
    <string name="community_tab_opinions">Opinions</string>
    <string name="community_tab_recommendations">Recommendations</string>
    <string name="community_search_label">Search</string>
    <string name="community_search_hint">Search…</string>
    <string name="community_fab_add">New</string>
    <string name="community_users_no_users">No users found</string>
    <string name="community_events_no_events">No events found</string>
    <string name="community_events_title">Title</string>
    <string name="community_events_location">Location</string>
    <string name="community_discussions_title">Title</string>
    <string name="community_discussions_description">Description</string>
    <string name="community_discussions_create_title">New discussion</string>
    <string name="scores_screen_created_by_on">Created by %1$s on %2$s</string>
    <string name="chip_score">#%1$d Score</string>
    <string name="score_img_description">Card image description</string>
    <string name="search_users_by_interest">User by interests</string>
    <string name="search_posts_by_coordinates">Posts close to me</string>
    <string name="city_hint">City</string>
    <string name="your_coordinates">Your coordinates</string>
    <string name="latitude">Latitude: %1$.4f</string>
    <string name="longitude">Longitude: %1$.4f</string>
    <string name="search_closest">Search on closest city</string>
    <string name="interest_hint">Interest</string>
    <string name="bottom_nav_menu_item_1">Home</string>
    <string name="bottom_nav_menu_item_2">Community</string>
    <string name="bottom_nav_menu_item_3">Scores</string>
    <string name="bottom_nav_menu_item_4">Search</string>
    <string name="bottom_nav_menu_item_5">Profile</string>
</resources>