<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeScreenFragment"
        android:icon="@drawable/bottom_nav_home_selector"
        android:title="@string/bottom_nav_menu_item_1"
        android:visible="true"/>

    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/bottom_nav_community_selector"
        android:title="@string/bottom_nav_menu_item_2"
        android:visible="true"/>

    <item
        android:id="@+id/scoresFragment"
        android:icon="@drawable/bottom_nav_scores_selector"
        android:title="@string/bottom_nav_menu_item_3"
        android:visible="true"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/bottom_nav_search_selector"
        android:title="@string/bottom_nav_menu_item_4"
        android:visible="true"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/bottom_nav_profile_selector"
        android:title="@string/bottom_nav_menu_item_5"
        android:visible="true"/>

</menu>