<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvSearchByCoordinatesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/search_posts_by_coordinates"
        android:textAppearance="?attr/textAppearanceDisplaySmall"
        android:textColor="@color/onSurfaceColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvYourCoordinatesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/your_coordinates"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/onSurfaceColor"
        app:layout_constraintEnd_toStartOf="@+id/submitSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchByCoordinatesTitle" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/latitude"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/onSurfaceColor"
        app:layout_constraintEnd_toStartOf="@+id/submitSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourCoordinatesTitle" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/longitude"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/onSurfaceColor"
        app:layout_constraintEnd_toStartOf="@+id/submitSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitude" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitSearchButton"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/community_search_label"
        app:layout_constraintBottom_toBottomOf="@+id/tvLongitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLatitude">

    </com.google.android.material.button.MaterialButton>

    <CheckBox
        android:id="@+id/searchClosestCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/search_closest"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitude" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/searchClosestCheckBox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPosts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/noPostsFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/profile_screen_no_posts"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="@color/onSurfaceVariantColor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>