<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surfaceBrightColor"
        style="@style/Theme.MaterialComponents.DialogWhenLarge">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismissButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/ic_clear"
            android:contentDescription="@string/accept"
            style="@style/Widget.Material3.Button.TextButton.Dialog.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/edit_screen_save_button"
            app:icon="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <!-- form -->

        <com.google.android.material.chip.Chip
            android:id="@+id/tvPostChip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/discussionColor"
            android:text="@string/discussion"
            android:textAlignment="center"
            android:textColor="@color/onPrimaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/dialogTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dialogTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/community_discussions_create_title"
            android:textAppearance="?attr/textAppearanceDisplaySmall"
            android:textColor="@color/onSurfaceVariantColor"
            app:layout_constraintEnd_toStartOf="@+id/tvPostChip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:labelFor="@string/community_discussions_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/community_discussions_title"
                android:maxLines="3"
                android:inputType="text"
                android:textColor="@color/primaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:labelFor="@string/community_discussions_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/community_discussions_description"
                android:maxLines="5"
                android:textColor="@color/primaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:labelFor="@string/tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postTagsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tags_hint"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:textColor="@color/primaryColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectImageButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/select_image"
            app:icon="@drawable/ic_select_image"
            app:layout_constraintBottom_toBottomOf="@+id/imagePreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagePreview" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/selectImageButton"
            app:layout_constraintTop_toBottomOf="@+id/postTags" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>