<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/secondaryContainerColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/flying_score"
                android:scaleType="centerCrop"
                android:contentDescription="@string/score_img_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/tvScoreChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/scoreColor"
                    android:textAlignment="center"
                    android:textColor="@color/onPrimaryColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/chip_score" />

                <TextView
                    android:id="@+id/tvScoreTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/onSecondaryContainerColor"
                    android:text="@string/username_tools" />

                <TextView
                    android:id="@+id/tvCreatedByOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="@color/onSecondaryContainerColor"
                    tools:text="@string/scores_screen_created_by_on" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>