<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreenFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.ShowMoreInfoFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/showMoreScreenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/show_more_screen_title"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceDisplaySmall"
        android:textColor="@color/onSurfaceVariantColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/showMoreSubtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_more_screen_subtitle_1"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/onSurfaceColor"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/showMoreScreenTitle"
        app:layout_constraintStart_toStartOf="@+id/showMoreScreenTitle"
        app:layout_constraintTop_toBottomOf="@+id/showMoreScreenTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/showMoreSubtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_more_screen_subtitle_2"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/onSurfaceColor"
        app:layout_constraintEnd_toEndOf="@+id/showMoreSubtitle1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/showMoreSubtitle1"
        app:layout_constraintTop_toBottomOf="@+id/showMoreSubtitle1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/showMoreFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/show_more_screen_footer"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/onSurfaceColor"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/showMoreSubtitle2"
        app:layout_constraintStart_toStartOf="@+id/showMoreSubtitle2"
        app:layout_constraintTop_toBottomOf="@+id/showMoreSubtitle2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/versionFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:text="@string/version"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/showMoreFooter"
        app:layout_constraintStart_toStartOf="@+id/showMoreFooter"
        app:layout_constraintTop_toBottomOf="@+id/showMoreFooter" />

</androidx.constraintlayout.widget.ConstraintLayout>